--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.0.5",
+    "react-slick": "^0.28.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
